--- a/kinomart/admin/templates/admin/coupon.html
+++ b/kinomart/admin/templates/admin/coupon.html
@@ -132,7 +132,7 @@
 
 
   <!-- model for editing coupon -->
-  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="add_couponLabel" aria-hidden="true">
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
         <div class="modal-header">
