--- a/kinomart/user/templates/user/order_history.html
+++ b/kinomart/user/templates/user/order_history.html
@@ -237,7 +237,7 @@
               data-buttontext="Pay with Razorpay"
               data-name="Kino Mart Grocery"
               data-description="Compleate Grocery Store"
-              data-image="https://example.com/your_logo.jpg"
+              data-image="{% static 'img/logo_icon.png' %}"
               data-prefill.name="{{selected_order.user}}"
               data-prefill.email="abc@ss.com"
               data-theme.color="#F37254"
