Change password will logout user and redirect to login page

--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -21,16 +21,18 @@
   
 
     {% if messages %}
+    {% for message in messages %}
+
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        {% for message in messages %}
            {{message}}
 
-        {% endfor %}
        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
      </div>
+     {% endfor %}
+
      {% endif %}
 
-    <form action="{% url 'login_user' %}" method="post">
+    <form action="{% url 'login_user' %}" method="post" class="p-4">
         {% csrf_token %}
         <div class="mb-1">
           
