--- a/user/templates/user/order_history.html
+++ b/user/templates/user/order_history.html
@@ -61,13 +61,13 @@
                     <p>Status: <span style="color: rgb(245, 3, 3);">Cancelled by admin</span></p>
 
                     {% elif order.status == 'Pending' %}
-                    {% if not order.return_status %}
-                    <p>Status: <span style="color: rgb(167, 167, 3);">{{ order.status }}</span>
+                        {% if not order.return_status %}
+                        <p>Status: <span style="color: rgb(167, 167, 3);">{{ order.status }}</span>
 
-                        <a href="{% url 'cancel_order' order.order_id %}" class="btn btn-danger btn-sm" style="margin-left: 15px;" onclick="return confirm('Are you sure you want to cancel this order?');">cancel order</a>
-                    {% elif order.return_status == 'Cancelled' %}
-                    <p>Status: <span style="color: rgb(245, 3, 3);">Order Cancelled</span>
-                    {% endif %}
+                            <a href="{% url 'cancel_order' order.order_id %}" class="btn btn-danger btn-sm" style="margin-left: 15px;" onclick="return confirm('Are you sure you want to cancel this order?');">cancel order</a>
+                        {% elif order.return_status == 'Cancelled' %}
+                        <p>Status: <span style="color: rgb(245, 3, 3);">Order Cancelled</span>
+                        {% endif %}
                         
                     </p>
                     {% elif order.status == 'Dispatched' %}
@@ -75,15 +75,15 @@
                         <!-- <button class="btn btn-danger btn-sm" style="margin-left: 15px;">cancel order</button> -->
                     </p>
                     {% else %}
-                    <p>Status: <span style="color: rgb(52, 208, 13);">{{ order.status }}</span>
                     {% if not order.return_status %}
+                        <p>Status: <span style="color: rgb(52, 208, 13);">{{ order.status }}</span></p>
 
-                        <a href="{% url 'return_order' order.order_id %}" class="btn btn-secondary btn-sm" style="margin-left: 15px;">Return</a>
+                        <a href="{% url 'return_order' order.order_id %}" class="btn btn-secondary btn-sm" onclick="return confirm('Are you sure you want to return this order?');" style="margin-left: 15px;">Return</a>
                     {% else %}
-                    <p>Status: <span style="color: rgb(245, 3, 3);">Item Returned</span>
+                    <p>Status: <span style="color: rgb(245, 3, 3);">Item Returned</span></p>
                         {% endif %}
 
-                    </p>
+                    
 
 
                         {% endif %}
